WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21343
REGRESSSION (
r37160
): ecma_3/ExecutionContexts/10.1.3-1.js and js1_4/Functions/function-001.js fail on 64-bit
https://bugs.webkit.org/show_bug.cgi?id=21343
Summary
REGRESSSION (r37160): ecma_3/ExecutionContexts/10.1.3-1.js and js1_4/Function...
Cameron Zwarich (cpst)
Reported
2008-10-03 12:50:22 PDT
This is a GCC bug that affects GCC 4.0, GCC 4.2, and llvm-gcc 4.2. I will post a fix shortly.
Attachments
Proposed patch
(2.60 KB, patch)
2008-10-03 13:21 PDT
,
Cameron Zwarich (cpst)
ggaren
: review+
Details
Formatted Diff
Diff
Proposed patch
(4.98 KB, patch)
2008-10-03 17:00 PDT
,
Cameron Zwarich (cpst)
mjs
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Cameron Zwarich (cpst)
Comment 1
2008-10-03 13:21:53 PDT
Created
attachment 24067
[details]
Proposed patch
Geoffrey Garen
Comment 2
2008-10-03 13:49:40 PDT
Comment on
attachment 24067
[details]
Proposed patch r=me
Cameron Zwarich (cpst)
Comment 3
2008-10-03 16:36:33 PDT
Landed in
r37253
.
Cameron Zwarich (cpst)
Comment 4
2008-10-03 17:00:23 PDT
Created
attachment 24075
[details]
Proposed patch
Maciej Stachowiak
Comment 5
2008-10-03 17:01:40 PDT
Comment on
attachment 24075
[details]
Proposed patch r=me
Cameron Zwarich (cpst)
Comment 6
2008-10-03 17:11:43 PDT
Landed in
r37268
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug